Fixed the search bar

--- a/partials/mushroomlist.html
+++ b/partials/mushroomlist.html
@@ -1,8 +1,16 @@
+<nav>
+    <h1>Mushroom Exercise</h1>
+        <input ng-model="searchText" type="text" >
+        <input ng-model="edibility"  type="radio" name="mushroom" value="true">
+            <label>edible</label>
+        <input ng-model="edibility" type="radio" name="mushroom" value="false">
+            <label>inedible</label>
+</nav>
 <article>
     <header><h1>List of Mushrooms</h1></header>
 
     <section>
-        <div ng-repeat="item in items | filter:{name:searchText, edible:true}">
+        <div ng-repeat="item in items | filter:{name:searchText, edible:edibility}">
           <h3>{{item.name}}</h3>
           <h4>{{item.edible}}</h4>
           <p>{{item.description}}</p>
